<resources>
    <string name="app_name">Trabalho01</string>
    <string name="textoSemCelular">Sem celular cadastrado</string>
    <string name="marca">Marca</string>
    <string name="modelo">Modelo</string>
    <string name="verso_android">Versão Android</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="excluir">Excluir</string>
    <string name="fechar">Fechar</string>
    <string name="id">Id</string>
    <string name="alterar">Alterar</string>
</resources>
